--- a/rootdir/etc/init.oneplus.rc
+++ b/rootdir/etc/init.oneplus.rc
@@ -4,3 +4,13 @@ on init
     mount none /product/overlay/EmptyOverlay.apk /vendor/overlay/oneplus_shape_square/OnePlusIconShapeSquareOverlay.apk bind
     mount none /product/overlay/EmptyOverlay.apk /vendor/overlay/oneplus_shape_squircle/OnePlusIconShapeSquircleOverlay.apk bind
     mount none /product/overlay/EmptyOverlay.apk /vendor/overlay/oneplus_shape_teardrop/OnePlusIconShapeTeardropOverlay.apk bind
+
+on boot
+    chmod 0666 /dev/dash/
+    restorecon /dev/dash
+
+service dashd /sbin/dashd
+    class core
+    critical
+    seclabel u:r:dashd:s0
+    group root system
